refactor : 가독성을 위해 toList() 사용